* Fix OGG background music
* Update setres.sh and advmame.sh for resolution 1280x1024p60hz (PR #600)
* Fix drastic game saves & save states erased when resetting scripts & binaries to default (PR #595) 
* Add Potator a Watara Supervision emulator core
* gptokeyb bump and fix missing trigger actions
* Crystal bump to latest
* emuelec-emulationstation bump to latest

# 4.1

General:
 
* Emulationstation: While in a game list, pressing X/Y will move to a random game/open game options, holding X/Y will mark it as favorite/open search (thanks to @lethal-guitar)
* Bump PPSSPPSDL to v1.11
* Bump Duckstation to abb7631
* Pico-8: Allow saving favorite carts, include binary in backup
* Update Sonic 1 and 2 so that they work with multiple gamepads
* Bump most emulators and cores to newest git hash (check commits for specifics)
* Bump Crystal theme which now includes a new panel (boxart), 16:9, 4:3 and CRT versions
* Enable bezels on OGS, not fully tested yet
* Bump Genesis-plus-gx and Genesis-plus-gx-wide to support FM music
* Use DinguxFileManager as default on all platforms
* Use gptokeyb as a fake keyboard for OpenBOR
* Bump Retroarch to 1.9.1
* API keys for Emulationstation have been changed, please refer to the emuelec-emulationstation/package.mk

Additions: 

* Added Chocolate-Doom and lzdoom with support for mods
* Added SuperTux and SuperTuxKart to ports
* Added Imagemagick (mainly for screenshot manipulation from CLI)
* Added logos to the ports (Thanks to Dim!)
* Added vertical aspect ratio option to OGA/S
* Added gptokeyb to enable video controls on all devices with SDL support! with configuration support
* Replace jslisten with gptokeyb to kill emulators
* Added easyrpg to es_systems.cfg
* Added Ecwolf with support for mods
* Added supermariowar to ports, on the first run a fake keyboard will be used, make sure you set your gamepad and restart the game, if you need to run the fake keyboard again delete /emuelec/configs/smw/nofakekeyb and run the game again.