@@ -1177,6 +1177,7 @@ All systems must be contained within the <systemList> tag.-->
                     <core>snes9x2002</core>
                     <core>snes9x2005_plus</core>
                     <core>mesen-s</core>
+                    <core>mednafen_supafaust</core>
                 </cores>
             </emulator>
         </emulators>
@@ -1200,6 +1201,7 @@ All systems must be contained within the <systemList> tag.-->
                     <core>snes9x2002</core>
                     <core>snes9x2005_plus</core>
                     <core>mesen-s</core>
+                    <core>mednafen_supafaust</core>
                 </cores>
             </emulator>
         </emulators>
@@ -1223,6 +1225,7 @@ All systems must be contained within the <systemList> tag.-->
                     <core>snes9x2002</core>
                     <core>snes9x2005_plus</core>
                     <core>mesen-s</core>
+                    <core>mednafen_supafaust</core>
                 </cores>
             </emulator>
         </emulators>
